Here is a concise commit message summarizing the changes in the provided diffs:
feat(market-crate): overhaul visual item layout rendering and settings

Refactored the Market Crate item rendering system to use predefined layout modes for better visual organization and to prevent clipping.

- Introduced `CrateLayoutMode` enum featuring `GESTAPELT` (Stacked) and `LOSE` (Loose) modes.
- Overhauled `ShopVisualSettings` and UI components (`SingleOfferSettingsSections`, `SingleOfferShopScreen`) to replace generic XYZ rotations, spread, and chaos with context-aware controls:
  - Base Rotation for the entire item group.
  - Layout Mode toggle button.
  - Dynamic slider for either `Item Spacing` (Stacked mode) or `Chaos Rotation` (Loose mode).
- Updated `SingleOfferShopBlockEntityRenderer`:
  - Safely clamps item display within crate bounds using a margin.
  - Implements precise grid calculation and block-dependent layer heights for `GESTAPELT` mode.
  - Implements deterministic randomized scattering with Y-layer tracking for `LOSE` mode.
  - Adapts legacy base shop rendering to utilize the new layout structures.
- Added `CRATE_LAYOUT_RENDERING.md` to document the mathematical positioning and rendering logic for each layout.
- Updated English and German localizations to include new UI labels and remove deprecated rotation/spread/chaos keys.
- Updated `ShopVisualSettingsTest` to verify NBT serialization, default states, and layout mode cycle wrapping.