@@ -1,5 +1,6 @@
 package de.bigbull.marketblocks.feature.visual.npc;
 
+import de.bigbull.marketblocks.feature.singleoffer.block.CrateLayoutMode;
 import io.netty.buffer.ByteBuf;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.codec.ByteBufCodecs;
@@ -19,11 +20,10 @@ public record ShopVisualSettings(
         float offerItemHeightOffset,
         boolean offerItemBobbing,
         int offerItemCount,
-        float offerItemRotationX,
-        float offerItemRotationY,
-        float offerItemRotationZ,
-        boolean offerItemChaos,
-        float offerItemSpread,
+        float offerItemRotation,
+        CrateLayoutMode offerItemLayoutMode,
+        float offerItemSpacing,
+        float offerItemChaosRotation,
         boolean dynamicFillLevel
 ) {
     private static final int MAX_NPC_NAME_LENGTH = 32;
@@ -35,14 +35,19 @@ public record ShopVisualSettings(
     private static final float MAX_OFFER_ITEM_HEIGHT = 4.0f;
     private static final int MIN_OFFER_ITEM_COUNT = 1;
     private static final int MAX_OFFER_ITEM_COUNT = 64;
-    private static final float MIN_OFFER_ITEM_SPREAD = 0.0f;
-    private static final float MAX_OFFER_ITEM_SPREAD = 4.0f;
+    // rotation bounds removed (unused) - rotation normalization uses modulo logic
+    private static final float MIN_OFFER_ITEM_SPACING = 0.0f;
+    private static final float MAX_OFFER_ITEM_SPACING = 1.0f;
+    private static final float MIN_OFFER_ITEM_CHAOS_ROTATION = 0.0f;
+    private static final float MAX_OFFER_ITEM_CHAOS_ROTATION = 1.0f;
     private static final float DEFAULT_OFFER_ITEM_SCALE = 1.0f;
     private static final float DEFAULT_OFFER_ITEM_SPEED = 2.0f;
     private static final float DEFAULT_OFFER_ITEM_HEIGHT = 0.0f;
     private static final int DEFAULT_OFFER_ITEM_COUNT = 1;
     private static final float DEFAULT_OFFER_ITEM_ROTATION = 0.0f;
-    private static final float DEFAULT_OFFER_ITEM_SPREAD = 0.2f;
+    private static final CrateLayoutMode DEFAULT_OFFER_ITEM_LAYOUT_MODE = CrateLayoutMode.LOSE;
+    private static final float DEFAULT_OFFER_ITEM_SPACING = 0.1f;
+    private static final float DEFAULT_OFFER_ITEM_CHAOS_ROTATION = 0.1f;
     private static final boolean DEFAULT_DYNAMIC_FILL_LEVEL = false;
 
     private static final String KEY_NPC_ENABLED = "NpcEnabled";
@@ -60,18 +65,16 @@ public record ShopVisualSettings(
     private static final String KEY_OFFER_ITEM_BOBBING = "OfferItemBobbing";
     private static final String KEY_OFFER_ITEM_COUNT = "OfferItemCount";
     private static final String KEY_OFFER_ITEM_ROTATION = "OfferItemRotation";
-    private static final String KEY_OFFER_ITEM_ROTATION_X = "OfferItemRotationX";
-    private static final String KEY_OFFER_ITEM_ROTATION_Y = "OfferItemRotationY";
-    private static final String KEY_OFFER_ITEM_ROTATION_Z = "OfferItemRotationZ";
-    private static final String KEY_OFFER_ITEM_CHAOS = "OfferItemChaos";
-    private static final String KEY_OFFER_ITEM_SPREAD = "OfferItemSpread";
+    private static final String KEY_OFFER_ITEM_LAYOUT_MODE = "OfferItemLayoutMode";
+    private static final String KEY_OFFER_ITEM_SPACING = "OfferItemSpacing";
+    private static final String KEY_OFFER_ITEM_CHAOS_ROTATION = "OfferItemChaosRotation";
     private static final String KEY_DYNAMIC_FILL_LEVEL = "DynamicFillLevel";
 
     public static final ShopVisualSettings DEFAULT = new ShopVisualSettings(
             false, "", VillagerVisualProfession.NONE, true, true, true,
             true, false, DEFAULT_OFFER_ITEM_SCALE, DEFAULT_OFFER_ITEM_SPEED, DEFAULT_OFFER_ITEM_HEIGHT,
-            true, DEFAULT_OFFER_ITEM_COUNT, DEFAULT_OFFER_ITEM_ROTATION, DEFAULT_OFFER_ITEM_ROTATION,
-            DEFAULT_OFFER_ITEM_ROTATION, false, DEFAULT_OFFER_ITEM_SPREAD, DEFAULT_DYNAMIC_FILL_LEVEL
+            true, DEFAULT_OFFER_ITEM_COUNT, DEFAULT_OFFER_ITEM_ROTATION, DEFAULT_OFFER_ITEM_LAYOUT_MODE,
+            DEFAULT_OFFER_ITEM_SPACING, DEFAULT_OFFER_ITEM_CHAOS_ROTATION, DEFAULT_DYNAMIC_FILL_LEVEL
     );
 
     public static final StreamCodec<ByteBuf, ShopVisualSettings> STREAM_CODEC = StreamCodec.of(
@@ -90,11 +93,10 @@ public record ShopVisualSettings(
                 ByteBufCodecs.FLOAT.encode(buf, settings.offerItemHeightOffset());
                 ByteBufCodecs.BOOL.encode(buf, settings.offerItemBobbing());
                 ByteBufCodecs.INT.encode(buf, settings.offerItemCount());
-                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemRotationX());
-                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemRotationY());
-                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemRotationZ());
-                ByteBufCodecs.BOOL.encode(buf, settings.offerItemChaos());
-                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemSpread());
+                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemRotation());
+                ByteBufCodecs.STRING_UTF8.encode(buf, settings.offerItemLayoutMode().serializedName());
+                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemSpacing());
+                ByteBufCodecs.FLOAT.encode(buf, settings.offerItemChaosRotation());
                 ByteBufCodecs.BOOL.encode(buf, settings.dynamicFillLevel());
             },
             buf -> new ShopVisualSettings(
@@ -113,9 +115,8 @@ public record ShopVisualSettings(
                     ByteBufCodecs.BOOL.decode(buf),
                     ByteBufCodecs.INT.decode(buf),
                     ByteBufCodecs.FLOAT.decode(buf),
+                    CrateLayoutMode.fromSerialized(ByteBufCodecs.STRING_UTF8.decode(buf)),
                     ByteBufCodecs.FLOAT.decode(buf),
-                    ByteBufCodecs.FLOAT.decode(buf),
-                    ByteBufCodecs.BOOL.decode(buf),
                     ByteBufCodecs.FLOAT.decode(buf),
                     ByteBufCodecs.BOOL.decode(buf)
             )
@@ -127,19 +128,18 @@ public record ShopVisualSettings(
         offerItemScale = clampFinite(offerItemScale, MIN_OFFER_ITEM_SCALE, MAX_OFFER_ITEM_SCALE, DEFAULT_OFFER_ITEM_SCALE);
         offerItemSpeed = clampFinite(offerItemSpeed, MIN_OFFER_ITEM_SPEED, MAX_OFFER_ITEM_SPEED, DEFAULT_OFFER_ITEM_SPEED);
         offerItemHeightOffset = clampFinite(offerItemHeightOffset, MIN_OFFER_ITEM_HEIGHT, MAX_OFFER_ITEM_HEIGHT, DEFAULT_OFFER_ITEM_HEIGHT);
-        offerItemCount = Math.max(MIN_OFFER_ITEM_COUNT, Math.min(MAX_OFFER_ITEM_COUNT, offerItemCount));
-        offerItemRotationX = normalizeDegrees(offerItemRotationX);
-        offerItemRotationY = normalizeDegrees(offerItemRotationY);
-        offerItemRotationZ = normalizeDegrees(offerItemRotationZ);
-        offerItemSpread = clampFinite(offerItemSpread, MIN_OFFER_ITEM_SPREAD, MAX_OFFER_ITEM_SPREAD, DEFAULT_OFFER_ITEM_SPREAD);
+        offerItemCount = Math.clamp(offerItemCount, MIN_OFFER_ITEM_COUNT, MAX_OFFER_ITEM_COUNT);
+        offerItemRotation = normalizeDegrees(offerItemRotation);
+        offerItemLayoutMode = offerItemLayoutMode == null ? DEFAULT_OFFER_ITEM_LAYOUT_MODE : offerItemLayoutMode;
+        offerItemSpacing = clampFinite(offerItemSpacing, MIN_OFFER_ITEM_SPACING, MAX_OFFER_ITEM_SPACING, DEFAULT_OFFER_ITEM_SPACING);
+        offerItemChaosRotation = clampFinite(offerItemChaosRotation, MIN_OFFER_ITEM_CHAOS_ROTATION, MAX_OFFER_ITEM_CHAOS_ROTATION, DEFAULT_OFFER_ITEM_CHAOS_ROTATION);
     }
 
     public ShopVisualSettings withNpcEnabled(boolean enabled) {
         return new ShopVisualSettings(
                 enabled, npcName, profession, purchaseParticlesEnabled, purchaseSoundsEnabled, paymentSlotSoundsEnabled,
                 offerItemVisible, offerItemFullbright, offerItemScale, offerItemSpeed, offerItemHeightOffset,
-                offerItemBobbing, offerItemCount, offerItemRotationX, offerItemRotationY, offerItemRotationZ,
-                offerItemChaos, offerItemSpread, dynamicFillLevel
+                offerItemBobbing, offerItemCount, offerItemRotation, offerItemLayoutMode, offerItemSpacing, offerItemChaosRotation, dynamicFillLevel
         );
     }
 
@@ -159,11 +159,10 @@ public record ShopVisualSettings(
         tag.putFloat(KEY_OFFER_ITEM_HEIGHT, offerItemHeightOffset);
         tag.putBoolean(KEY_OFFER_ITEM_BOBBING, offerItemBobbing);
         tag.putInt(KEY_OFFER_ITEM_COUNT, offerItemCount);
-        tag.putFloat(KEY_OFFER_ITEM_ROTATION_X, offerItemRotationX);
-        tag.putFloat(KEY_OFFER_ITEM_ROTATION_Y, offerItemRotationY);
-        tag.putFloat(KEY_OFFER_ITEM_ROTATION_Z, offerItemRotationZ);
-        tag.putBoolean(KEY_OFFER_ITEM_CHAOS, offerItemChaos);
-        tag.putFloat(KEY_OFFER_ITEM_SPREAD, offerItemSpread);
+        tag.putFloat(KEY_OFFER_ITEM_ROTATION, offerItemRotation);
+        tag.putString(KEY_OFFER_ITEM_LAYOUT_MODE, offerItemLayoutMode.serializedName());
+        tag.putFloat(KEY_OFFER_ITEM_SPACING, offerItemSpacing);
+        tag.putFloat(KEY_OFFER_ITEM_CHAOS_ROTATION, offerItemChaosRotation);
         tag.putBoolean(KEY_DYNAMIC_FILL_LEVEL, dynamicFillLevel);
         return tag;
     }
@@ -187,11 +186,10 @@ public record ShopVisualSettings(
                 tag.contains(KEY_OFFER_ITEM_HEIGHT) ? tag.getFloat(KEY_OFFER_ITEM_HEIGHT) : DEFAULT_OFFER_ITEM_HEIGHT,
                 !tag.contains(KEY_OFFER_ITEM_BOBBING) || tag.getBoolean(KEY_OFFER_ITEM_BOBBING),
                 tag.contains(KEY_OFFER_ITEM_COUNT) ? tag.getInt(KEY_OFFER_ITEM_COUNT) : DEFAULT_OFFER_ITEM_COUNT,
-                tag.contains(KEY_OFFER_ITEM_ROTATION_X) ? tag.getFloat(KEY_OFFER_ITEM_ROTATION_X) : DEFAULT_OFFER_ITEM_ROTATION,
-                tag.contains(KEY_OFFER_ITEM_ROTATION_Y) ? tag.getFloat(KEY_OFFER_ITEM_ROTATION_Y) : legacyOfferItemRotationY(tag),
-                tag.contains(KEY_OFFER_ITEM_ROTATION_Z) ? tag.getFloat(KEY_OFFER_ITEM_ROTATION_Z) : DEFAULT_OFFER_ITEM_ROTATION,
-                tag.getBoolean(KEY_OFFER_ITEM_CHAOS),
-                tag.contains(KEY_OFFER_ITEM_SPREAD) ? tag.getFloat(KEY_OFFER_ITEM_SPREAD) : DEFAULT_OFFER_ITEM_SPREAD,
+                tag.contains(KEY_OFFER_ITEM_ROTATION) ? tag.getFloat(KEY_OFFER_ITEM_ROTATION) : DEFAULT_OFFER_ITEM_ROTATION,
+                tag.contains(KEY_OFFER_ITEM_LAYOUT_MODE) ? CrateLayoutMode.fromSerialized(tag.getString(KEY_OFFER_ITEM_LAYOUT_MODE)) : DEFAULT_OFFER_ITEM_LAYOUT_MODE,
+                tag.contains(KEY_OFFER_ITEM_SPACING) ? tag.getFloat(KEY_OFFER_ITEM_SPACING) : DEFAULT_OFFER_ITEM_SPACING,
+                tag.contains(KEY_OFFER_ITEM_CHAOS_ROTATION) ? tag.getFloat(KEY_OFFER_ITEM_CHAOS_ROTATION) : DEFAULT_OFFER_ITEM_CHAOS_ROTATION,
                 tag.contains(KEY_DYNAMIC_FILL_LEVEL) ? tag.getBoolean(KEY_DYNAMIC_FILL_LEVEL) : DEFAULT_DYNAMIC_FILL_LEVEL
         );
     }
@@ -200,7 +198,7 @@ public record ShopVisualSettings(
         if (!Float.isFinite(value)) {
             return fallback;
         }
-        return Math.max(min, Math.min(max, value));
+        return Math.clamp(value, min, max);
     }
 
     private static float normalizeDegrees(float value) {
@@ -211,9 +209,6 @@ public record ShopVisualSettings(
         return normalized < 0.0f ? normalized + 360.0f : normalized;
     }
 
-    private static float legacyOfferItemRotationY(CompoundTag tag) {
-        return tag.contains(KEY_OFFER_ITEM_ROTATION) ? tag.getFloat(KEY_OFFER_ITEM_ROTATION) : DEFAULT_OFFER_ITEM_ROTATION;
-    }
 
     public static String sanitizeNpcName(String raw) {
         if (raw == null || raw.isBlank()) {
